# FFmpeg_Player

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  README.md
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jamff/ffmpeg/: DecodeUtils.java  MainActivity.java
app/src/main/jni/: audio_player.c  com_jamff_ffmpeg_DecodeUtils.h  ffmpeg_player.c  video_player.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ffmpeg4/: CMakeLists.txt  README.md  build.gradle
ffmpeg4/src/main/: AndroidManifest.xml
ffmpeg4/src/main/cpp/: native-lib.cpp
ffmpeg4/src/main/java/com/jamff/ffmpeg/last/: MainActivity.java
ffmpeg4/src/main/res/layout/: activity_main.xml
ffmpeg4/src/main/res/values/: strings.xml
ffmpeg4_player/: CMakeLists.txt  README.md
ffmpeg4_player/src/main/java/com/jamff/ffmpeg/: MainActivity.java  MyPlayer.java
ffmpeg4_player/src/main/jni/: com_jamff_ffmpeg_MyPlayer.h  player.c
ffmpeg4_player/src/main/res/layout/: activity_main.xml
ffmpeg4_player/src/main/res/values/: strings.xml
ffmpeg4_so/: CMakeLists.txt  README.md
ffmpeg4_so/src/main/: AndroidManifest.xml
ffmpeg4_so/src/main/java/com/jamff/ffmpeg/: MainActivity.java  MyPlayer.java  VideoUtils.java
ffmpeg4_so/src/main/java/com/jamff/ffmpeg/widget/: VideoView.java
ffmpeg4_so/src/main/jni/: audio_player.c  com_jamff_ffmpeg_MyPlayer.h  ffmpeg_player.c  video_player.c
ffmpeg4_so/src/main/res/layout/: activity_main.xml
ffmpeg4_so/src/main/res/values/: strings.xml
ffmpeg4_so_new/: CMakeLists.txt  README.md  build.gradle
ffmpeg4_so_new/src/main/java/com/jamff/ffmpeg/: MainActivity.java  VideoUtils.java
ffmpeg4_so_new/src/main/jni/: com_jamff_ffmpeg_VideoUtils.h  ffmpeg_player.c
ffmpeg4_so_new/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
player_sync/: CMakeLists.txt  README.md  build.gradle
player_sync/src/main/java/com/jamff/ffmpeg/: MainActivity.java  MyPlayer.java
player_sync/src/main/java/com/jamff/ffmpeg/widget/: VideoView.java
player_sync/src/main/jni/: player.c
player_sync/src/main/res/values/: strings.xml
